--- a/index.html
+++ b/index.html
@@ -459,17 +459,16 @@
         <div class="timeline-item">
           <div class="timeline-dot"></div>
           <div class="timeline-date">
-            <span>2016 - 2018</span>
+            <span>2023 - 2025</span>
           </div>
           <div class="timeline-content">
-            <h3 class="timeline-title">Master of Science in Data Science</h3>
-            <h4 class="timeline-subtitle">University of Technology</h4>
+            <h3 class="timeline-title">Master of Science in Applied Data Analytics</h3>
+            <h4 class="timeline-subtitle">Boston University</h4>
             <p class="timeline-description">
-              Specialized in machine learning and statistical modeling. Thesis on "Optimizing Recommendation Systems Using Deep Learning Techniques."
+              Specialized in big data analysis, data mining, machine learning and statistical modeling.
             </p>
             <div class="timeline-tags">
-              <span class="tag">GPA: 3.92/4.0</span>
-              <span class="tag">Research Assistant</span>
+              <span class="tag">GPA: 3.93/4.0</span>
             </div>
           </div>
         </div>
@@ -478,17 +477,16 @@
         <div class="timeline-item">
           <div class="timeline-dot"></div>
           <div class="timeline-date">
-            <span>2012 - 2016</span>
+            <span>2019 - 2013</span>
           </div>
           <div class="timeline-content">
             <h3 class="timeline-title">Bachelor of Science in Computer Science</h3>
-            <h4 class="timeline-subtitle">State University</h4>
+            <h4 class="timeline-subtitle">Vellore Institute of Technology, VIT</h4>
             <p class="timeline-description">
-              Minor in Mathematics. Coursework included algorithms, data structures, database systems, and statistics.
+              Majors in Computer Science and Engineering. Coursework included algorithms, data structures, database systems, and statistics.
             </p>
             <div class="timeline-tags">
-              <span class="tag">GPA: 3.8/4.0</span>
-              <span class="tag">Dean's List</span>
+              <span class="tag">GPA: 8.90/10.0</span>
             </div>
           </div>
         </div>
