--- a/index.html
+++ b/index.html
@@ -497,84 +497,83 @@
       </div>
     </div>
   </section>
-
-  <!-- Testimonials Section -->
-  <section class="testimonials section">
+  
+  <!-- Contact Section -->
+  <section id="contact" class="contact section">
     <div class="container">
-      <h2 class="section-title">What People Say</h2>
-      <div class="testimonials-slider">
-        <div class="testimonial-track">
-          <!-- Testimonial 1 -->
-          <div class="testimonial-item">
-            <div class="testimonial-content">
-              <div class="testimonial-text">
-                <p>"Yash's analytical abilities are exceptional. He quickly identified patterns in our customer data that we had missed for years, leading to a significant improvement in our targeting strategy."</p>
+      <h2 class="section-title">Get In Touch</h2>
+      <div class="contact-content">
+        <div class="contact-info">
+          <p>Interested in working together or have questions about my projects? Feel free to reach out!</p>
+          <div class="contact-details">
+            <div class="contact-item">
+              <div class="contact-icon">
+                <i class="fas fa-envelope"></i>
               </div>
-              <div class="testimonial-author">
-                <div class="author-image">
-                  <img src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="John Smith" />
-                </div>
-                <div class="author-info">
-                  <h4 class="author-name">John Smith</h4>
-                  <p class="author-title">Marketing Director, RetailTech</p>
-                </div>
+              <div class="contact-text">
+                <h4>Email</h4>
+                <a href="mailto:yashsb108@gmail.com">yashsb108@gmail.com</a>
+              </div>
+            </div>
+            <div class="contact-item">
+              <div class="contact-icon">
+                <i class="fas fa-phone"></i>
+              </div>
+              <div class="contact-text">
+                <h4>Phone</h4>
+                <a href="tel:+18577538713">+1 (857) 753-8713</a>
+              </div>
+            </div>
+            <div class="contact-item">
+              <div class="contact-icon">
+                <i class="fas fa-map-marker-alt"></i>
+              </div>
+              <div class="contact-text">
+                <h4>Location</h4>
+                <p>Boston, MA</p>
               </div>
             </div>
           </div>
-          
-          <!-- Testimonial 2 -->
-          <div class="testimonial-item">
-            <div class="testimonial-content">
-              <div class="testimonial-text">
-                <p>"Working with Yash transformed how we approach data. His visualizations made complex information accessible to everyone in the organization, driving better decision-making at all levels."</p>
-              </div>
-              <div class="testimonial-author">
-                <div class="author-image">
-                  <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Sarah Johnson" />
-                </div>
-                <div class="author-info">
-                  <h4 class="author-name">Sarah Johnson</h4>
-                  <p class="author-title">CEO, Data Solutions Inc.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          
-          <!-- Testimonial 3 -->
-          <div class="testimonial-item">
-            <div class="testimonial-content">
-              <div class="testimonial-text">
-                <p>"The predictive model Yash developed for us has been a game-changer. We've reduced inventory costs by 22% while maintaining service levels. His technical expertise combined with business acumen is rare and valuable."</p>
-              </div>
-              <div class="testimonial-author">
-                <div class="author-image">
-                  <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Michael Chen" />
-                </div>
-                <div class="author-info">
-                  <h4 class="author-name">Michael Chen</h4>
-                  <p class="author-title">Supply Chain Manager, Global Retail</p>
-                </div>
-              </div>
-            </div>
+          <div class="social-links">
+            <a href="https://www.linkedin.com/in/yashrao01/" class="social-link" aria-label="LinkedIn">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#" class="social-link" aria-label="GitHub">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="#" class="social-link" aria-label="Twitter">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="social-link" aria-label="Medium">
+              <i class="fab fa-medium-m"></i>
+            </a>
           </div>
         </div>
-        <div class="testimonial-controls">
-          <button class="testimonial-prev" aria-label="Previous testimonial">
-            <i class="fas fa-chevron-left"></i>
-          </button>
-          <div class="testimonial-dots">
-            <span class="dot active"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-          </div>
-          <button class="testimonial-next" aria-label="Next testimonial">
-            <i class="fas fa-chevron-right"></i>
-          </button>
+        <div class="contact-form">
+          <form id="contactForm">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+              <label for="subject">Subject</label>
+              <input type="text" id="subject" name="subject" required>
+            </div>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Send Message</button>
+          </form>
         </div>
       </div>
     </div>
   </section>
-  
+
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
