--- a/index.html
+++ b/index.html
@@ -390,6 +390,31 @@
     </div>
   </section>
 
+  <!-- Certifications Section -->
+  <section id="certifications" class="certifications section">
+    <div class="container">
+      <h2 class="section-title">Certifications</h2>
+      <div class="certification-list">
+        <div class="certification-item">
+          <h3>PL-300: Microsoft Power BI Data Analyst</h3>
+          <p>Issued by Microsoft · April 2024</p>
+          <a href="https://learn.microsoft.com/en-us/credentials/certifications/power-bi-data-analyst-associate/" target="_blank" class="certification-link">View Certification</a>
+        </div>
+        <div class="certification-item">
+          <h3>Google Cloud Professional Data Engineer (In Progress)</h3>
+          <p>Issued by Google Cloud · Expected July 2024</p>
+          <a href="https://cloud.google.com/certification/data-engineer" target="_blank" class="certification-link">Learn More</a>
+        </div>
+        <div class="certification-item">
+          <h3>DeepLearning.AI TensorFlow Developer</h3>
+          <p>Issued by DeepLearning.AI · March 2023</p>
+          <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/XYZ" target="_blank" class="certification-link">View Certificate</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <!-- Experience Section -->
   <section id="experience" class="experience section">
     <div class="container">
