--- a/index.html
+++ b/index.html
@@ -394,25 +394,33 @@
   <section id="certifications" class="certifications section">
     <div class="container">
       <h2 class="section-title">Certifications</h2>
-      <div class="certification-list">
-        <div class="certification-item">
-          <h3>PL-300: Microsoft Power BI Data Analyst</h3>
-          <p>Issued by Microsoft · April 2024</p>
-          <a href="https://learn.microsoft.com/en-us/credentials/certifications/power-bi-data-analyst-associate/" target="_blank" class="certification-link">View Certification</a>
+      <div class="certifications-grid">
+        
+        <!-- Card 1 -->
+        <div class="certification-card">
+          <h3 class="cert-title">Microsoft Power BI Data Analyst (PL-300)</h3>
+          <p class="cert-issuer">Issued by Microsoft · April 2024</p>
+          <a href="https://learn.microsoft.com/en-us/credentials/certifications/power-bi-data-analyst-associate/" target="_blank" class="cert-link">View Credential</a>
         </div>
-        <div class="certification-item">
-          <h3>Google Cloud Professional Data Engineer (In Progress)</h3>
-          <p>Issued by Google Cloud · Expected July 2024</p>
-          <a href="https://cloud.google.com/certification/data-engineer" target="_blank" class="certification-link">Learn More</a>
+
+        <!-- Card 2 -->
+        <div class="certification-card">
+          <h3 class="cert-title">IBM Data Science Professional Certificate</h3>
+          <p class="cert-issuer">Issued by IBM · July 2023</p>
+          <a href="https://www.coursera.org/professional-certificates/ibm-data-science" target="_blank" class="cert-link">View Program</a>
         </div>
-        <div class="certification-item">
-          <h3>DeepLearning.AI TensorFlow Developer</h3>
-          <p>Issued by DeepLearning.AI · March 2023</p>
-          <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/XYZ" target="_blank" class="certification-link">View Certificate</a>
+
+        <!-- Card 3 -->
+        <div class="certification-card">
+          <h3 class="cert-title">AWS Certified Cloud Practitioner</h3>
+          <p class="cert-issuer">Issued by Amazon Web Services · Aug 2024</p>
+          <a href="https://aws.amazon.com/certification/certified-cloud-practitioner/" target="_blank" class="cert-link">Explore Credential</a>
         </div>
+
       </div>
     </div>
   </section>
+
 
 
   <!-- Experience Section -->
