changed experience and education

--- a/index.html
+++ b/index.html
@@ -390,6 +390,67 @@
     </div>
   </section>
 
+  <!-- Experience & Education Section -->
+  <section id="experience-edu" class="section">
+    <div class="container">
+      <h2 class="section-title">Experience & Education</h2>
+      <div class="timeline-grid">
+
+        <!-- Experience Card 1 -->
+        <div class="timeline-card">
+          <h3 class="timeline-role">Graduate Research Assistant</h3>
+          <h4 class="timeline-org">Boston University, USA</h4>
+          <p class="timeline-date">Feb 2024 – May 2024</p>
+          <ul>
+            <li>Deployed ChromaDB vector database for Cleveland Clinic’s melanoma research.</li>
+            <li>Integrated RAG with Llama-2-7b; achieved 90% expert-validated accuracy.</li>
+            <li>Enhanced pipeline output using step-back querying and query translation.</li>
+          </ul>
+        </div>
+
+        <!-- Experience Card 2 -->
+        <div class="timeline-card">
+          <h3 class="timeline-role">Research Intern</h3>
+          <h4 class="timeline-org">IIT Roorkee, India</h4>
+          <p class="timeline-date">Sep 2022 – Feb 2023</p>
+          <ul>
+            <li>Developed hybrid 1D–2D ResNet50 for hyperspectral segmentation.</li>
+            <li>Achieved 91% accuracy and 0.995 ROC-AUC in land cover classification.</li>
+          </ul>
+        </div>
+
+        <!-- Experience Card 3 -->
+        <div class="timeline-card">
+          <h3 class="timeline-role">Data Analyst</h3>
+          <h4 class="timeline-org">Cutso Foods LLP</h4>
+          <p class="timeline-date">Jun 2020 – Jul 2022</p>
+          <ul>
+            <li>Built scalable APIs; improved retrieval time by 50% using automation.</li>
+            <li>Enhanced SQL performance by 35% and introduced multithreading.</li>
+            <li>Led ETL pipeline creation and dashboard automation.</li>
+          </ul>
+        </div>
+
+        <!-- Education Card 1 -->
+        <div class="timeline-card education">
+          <h3 class="timeline-role">M.S. Applied Data Analytics</h3>
+          <h4 class="timeline-org">Boston University</h4>
+          <p class="timeline-date">Sep 2023 – Jan 2025</p>
+          <p>GPA: 3.93/4.00</p>
+        </div>
+
+        <!-- Education Card 2 -->
+        <div class="timeline-card education">
+          <h3 class="timeline-role">B.Tech Computer Science</h3>
+          <h4 class="timeline-org">VIT, India</h4>
+          <p class="timeline-date">Jul 2019 – Jun 2023</p>
+          <p>GPA: 8.90/10</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <!-- Certifications Section -->
   <section id="certifications" class="certifications section">
     <div class="container">
