timeline left - right

--- a/index.html
+++ b/index.html
@@ -390,76 +390,77 @@
     </div>
   </section>
 
-  <!-- Experience & Education Section -->
-  <section id="experience-edu" class="section">
+  <!-- Combined Timeline: Experience Left, Education Right -->
+  <section id="timeline" class="section">
     <div class="container">
       <h2 class="section-title">Experience & Education</h2>
-      <div class="timeline-grid">
+      <div class="timeline-wrapper">
 
-        <!-- Experience Card 1 -->
-        <div class="timeline-card">
-          <h3 class="timeline-role">Graduate Research Assistant</h3>
-          <h4 class="timeline-org">Boston University, USA</h4>
-          <p class="timeline-date">Feb 2024 – May 2024</p>
-          <ul>
-            <li>Deployed ChromaDB vector database for Cleveland Clinic’s melanoma research.</li>
-            <li>Integrated RAG with Llama-2-7b; achieved 90% expert-validated accuracy.</li>
-            <li>Enhanced pipeline output using step-back querying and query translation.</li>
-          </ul>
+        <!-- Timeline Item 1 - Experience -->
+        <div class="timeline-item left">
+          <div class="timeline-content">
+            <h3 class="timeline-title">Graduate Research Assistant</h3>
+            <h4>Boston University, USA</h4>
+            <span class="timeline-date">Feb 2024 – May 2024</span>
+            <ul>
+              <li>Deployed ChromaDB vector DB for Cleveland Clinic’s melanoma research.</li>
+              <li>Integrated RAG with Llama-2; achieved 90% expert-validated accuracy.</li>
+              <li>Used Query Translation + Step-back querying to improve pipelines.</li>
+            </ul>
+          </div>
         </div>
 
-        <!-- Experience Card 2 -->
-        <div class="timeline-card">
-          <h3 class="timeline-role">Research Intern</h3>
-          <h4 class="timeline-org">IIT Roorkee, India</h4>
-          <p class="timeline-date">Sep 2022 – Feb 2023</p>
-          <ul>
-            <li>Developed hybrid 1D–2D ResNet50 for hyperspectral segmentation.</li>
-            <li>Achieved 91% accuracy and 0.995 ROC-AUC in land cover classification.</li>
-          </ul>
+        <!-- Timeline Item 2 - Education -->
+        <div class="timeline-item right">
+          <div class="timeline-content">
+            <h3 class="timeline-title">M.S. in Applied Data Analytics</h3>
+            <h4>Boston University</h4>
+            <span class="timeline-date">Sep 2023 – Jan 2025</span>
+            <p>GPA: 3.93 / 4.00</p>
+          </div>
         </div>
 
-        <!-- Experience Card 3 -->
-        <div class="timeline-card">
-          <h3 class="timeline-role">Data Analyst</h3>
-          <h4 class="timeline-org">Cutso Foods LLP</h4>
-          <p class="timeline-date">Jun 2020 – Jul 2022</p>
-          <ul>
-            <li>Built scalable APIs; improved retrieval time by 50% using automation.</li>
-            <li>Enhanced SQL performance by 35% and introduced multithreading.</li>
-            <li>Led ETL pipeline creation and dashboard automation.</li>
-          </ul>
+        <!-- Timeline Item 3 - Experience -->
+        <div class="timeline-item left">
+          <div class="timeline-content">
+            <h3 class="timeline-title">Research Intern</h3>
+            <h4>IIT Roorkee, India</h4>
+            <span class="timeline-date">Sep 2022 – Feb 2023</span>
+            <ul>
+              <li>Developed 1D–2D ResNet50 for hyperspectral segmentation.</li>
+              <li>Achieved 91% accuracy and 0.995 ROC-AUC on land cover classification.</li>
+            </ul>
+          </div>
         </div>
+
+        <!-- Timeline Item 4 - Education -->
+        <div class="timeline-item right">
+          <div class="timeline-content">
+            <h3 class="timeline-title">B.Tech in Computer Science</h3>
+            <h4>VIT, India</h4>
+            <span class="timeline-date">Jul 2019 – Jun 2023</span>
+            <p>GPA: 8.90 / 10</p>
+          </div>
+        </div>
+
+        <!-- Timeline Item 5 - Experience -->
+        <div class="timeline-item left">
+          <div class="timeline-content">
+            <h3 class="timeline-title">Data Analyst</h3>
+            <h4>Cutso Foods LLP</h4>
+            <span class="timeline-date">Jun 2020 – Jul 2022</span>
+            <ul>
+              <li>Built REST APIs, optimized SQL performance by 35%.</li>
+              <li>Created automated dashboards for finance data.</li>
+              <li>Improved system latency by 30% via multithreading.</li>
+            </ul>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
-  <!-- Education Timeline Section -->
-  <section id="education" class="section">
-    <div class="container">
-      <h2 class="section-title">Education</h2>
-      <div class="edu-timeline">
 
-        <!-- Education 1 -->
-        <div class="edu-item">
-          <div class="edu-content">
-            <h3 class="edu-degree">M.S. Applied Data Analytics</h3>
-            <p class="edu-school">Boston University, USA</p>
-            <p class="edu-date">Sep 2023 – Jan 2025</p>
-            <p class="edu-gpa">GPA: 3.93/4.00</p>
-          </div>
-        </div>
-        <!-- Education 2 -->
-        <div class="edu-item">
-          <div class="edu-content">
-            <h3 class="edu-degree">B.Tech Computer Science</h3>
-            <p class="edu-school">Vellore Institute of Technology, India</p>
-            <p class="edu-date">Jul 2019 – Jun 2023</p>
-            <p class="edu-gpa">GPA: 8.90/10.0</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Certifications Section -->
   <section id="certifications" class="certifications section">
