timeline changed - sync

--- a/index.html
+++ b/index.html
@@ -390,76 +390,83 @@
     </div>
   </section>
 
-  <!-- Combined Timeline: Experience Left, Education Right -->
+  <!-- Experience & Education Paired Timeline -->
   <section id="timeline" class="section">
     <div class="container">
       <h2 class="section-title">Experience & Education</h2>
       <div class="timeline-wrapper">
 
-        <!-- Timeline Item 1 - Experience -->
-        <div class="timeline-item left">
-          <div class="timeline-content">
-            <h3 class="timeline-title">Graduate Research Assistant</h3>
-            <h4>Boston University, USA</h4>
-            <span class="timeline-date">Feb 2024 – May 2024</span>
-            <ul>
-              <li>Deployed ChromaDB vector DB for Cleveland Clinic’s melanoma research.</li>
-              <li>Integrated RAG with Llama-2; achieved 90% expert-validated accuracy.</li>
-              <li>Used Query Translation + Step-back querying to improve pipelines.</li>
-            </ul>
+        <!-- Row 1: Cutso ↔ VIT -->
+        <div class="timeline-row">
+          <div class="timeline-item left">
+            <div class="timeline-content">
+              <h3 class="timeline-title">Data Analyst</h3>
+              <h4>Cutso Foods LLP</h4>
+              <span class="timeline-date">Jun 2020 – Jul 2022</span>
+              <ul>
+                <li>Built REST APIs, improved SQL by 35%.</li>
+                <li>Created dashboards & automated reports.</li>
+                <li>Reduced latency by 30% with multithreading.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="timeline-dot"></div>
+          <div class="timeline-item right">
+            <div class="timeline-content">
+              <h3 class="timeline-title">B.Tech in Computer Science</h3>
+              <h4>VIT, India</h4>
+              <span class="timeline-date">Jul 2019 – Jun 2023</span>
+              <p>GPA: 8.90 / 10</p>
+            </div>
           </div>
         </div>
 
-        <!-- Timeline Item 2 - Education -->
-        <div class="timeline-item right">
-          <div class="timeline-content">
-            <h3 class="timeline-title">M.S. in Applied Data Analytics</h3>
-            <h4>Boston University</h4>
-            <span class="timeline-date">Sep 2023 – Jan 2025</span>
-            <p>GPA: 3.93 / 4.00</p>
+        <!-- Row 2: IIT Roorkee ↔ (empty space) -->
+        <div class="timeline-row">
+          <div class="timeline-item left">
+            <div class="timeline-content">
+              <h3 class="timeline-title">Research Intern</h3>
+              <h4>IIT Roorkee</h4>
+              <span class="timeline-date">Sep 2022 – Feb 2023</span>
+              <ul>
+                <li>Developed 1D–2D ResNet50 for hyperspectral imagery.</li>
+                <li>Achieved 91% accuracy and ROC-AUC of 0.995.</li>
+              </ul>
+            </div>
           </div>
+          <div class="timeline-dot"></div>
+          <div class="timeline-item right empty"></div>
         </div>
 
-        <!-- Timeline Item 3 - Experience -->
-        <div class="timeline-item left">
-          <div class="timeline-content">
-            <h3 class="timeline-title">Research Intern</h3>
-            <h4>IIT Roorkee, India</h4>
-            <span class="timeline-date">Sep 2022 – Feb 2023</span>
-            <ul>
-              <li>Developed 1D–2D ResNet50 for hyperspectral segmentation.</li>
-              <li>Achieved 91% accuracy and 0.995 ROC-AUC on land cover classification.</li>
-            </ul>
+        <!-- Row 3: BU RA ↔ BU MS -->
+        <div class="timeline-row">
+          <div class="timeline-item left">
+            <div class="timeline-content">
+              <h3 class="timeline-title">Graduate Research Assistant</h3>
+              <h4>Boston University</h4>
+              <span class="timeline-date">Feb 2024 – May 2024</span>
+              <ul>
+                <li>Built ChromaDB vector DB for melanoma research.</li>
+                <li>Integrated Llama2 RAG with 90% accuracy.</li>
+                <li>Used Query Translation + Step-Back Querying.</li>
+              </ul>
+            </div>
           </div>
-        </div>
-
-        <!-- Timeline Item 4 - Education -->
-        <div class="timeline-item right">
-          <div class="timeline-content">
-            <h3 class="timeline-title">B.Tech in Computer Science</h3>
-            <h4>VIT, India</h4>
-            <span class="timeline-date">Jul 2019 – Jun 2023</span>
-            <p>GPA: 8.90 / 10</p>
-          </div>
-        </div>
-
-        <!-- Timeline Item 5 - Experience -->
-        <div class="timeline-item left">
-          <div class="timeline-content">
-            <h3 class="timeline-title">Data Analyst</h3>
-            <h4>Cutso Foods LLP</h4>
-            <span class="timeline-date">Jun 2020 – Jul 2022</span>
-            <ul>
-              <li>Built REST APIs, optimized SQL performance by 35%.</li>
-              <li>Created automated dashboards for finance data.</li>
-              <li>Improved system latency by 30% via multithreading.</li>
-            </ul>
+          <div class="timeline-dot"></div>
+          <div class="timeline-item right">
+            <div class="timeline-content">
+              <h3 class="timeline-title">M.S. in Applied Data Analytics</h3>
+              <h4>Boston University</h4>
+              <span class="timeline-date">Sep 2023 – Jan 2025</span>
+              <p>GPA: 3.93 / 4.00</p>
+            </div>
           </div>
         </div>
 
       </div>
     </div>
   </section>
+
 
 
   <!-- Certifications Section -->
