--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
 </head>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-<script>
-  AOS.init();
-</script>
 <body>
   <!-- Navbar -->
   <nav class="navbar">
@@ -400,10 +395,8 @@
     <div class="container">
       <h2 class="section-title">Experience & Education</h2>
       <div class="timeline-wrapper">
-
-        <!-- Row 1: BU MS ↔ BU RA -->
         <div class="timeline-row">
-          <div class="timeline-item left" data-aos="fade-right">
+          <div class="timeline-item left">
             <div class="timeline-content">
               <h3 class="timeline-title">Graduate Research Assistant</h3>
               <h4>Boston University</h4>
@@ -415,8 +408,8 @@
               </ul>
             </div>
           </div>
-          <div class="timeline-dot" data-aos="zoom-in"></div>
-          <div class="timeline-item right" data-aos="fade-left">
+          <div class="timeline-dot"></div>
+          <div class="timeline-item right">
             <div class="timeline-content">
               <h3 class="timeline-title">M.S. in Applied Data Analytics</h3>
               <h4>Boston University</h4>
@@ -425,10 +418,9 @@
             </div>
           </div>
         </div>
-
-        <!-- Row 2: IIT Roorkee ↔ (empty) -->
+        <!-- Row 2: IIT Roorkee ↔ (empty space) -->
         <div class="timeline-row">
-          <div class="timeline-item left" data-aos="fade-right">
+          <div class="timeline-item left">
             <div class="timeline-content">
               <h3 class="timeline-title">Research Intern</h3>
               <h4>IIT Roorkee</h4>
@@ -439,13 +431,11 @@
               </ul>
             </div>
           </div>
-          <div class="timeline-dot" data-aos="zoom-in"></div>
+          <div class="timeline-dot"></div>
           <div class="timeline-item right empty"></div>
         </div>
-
-        <!-- Row 3: Cutso ↔ VIT -->
         <div class="timeline-row">
-          <div class="timeline-item left" data-aos="fade-right">
+          <div class="timeline-item left">
             <div class="timeline-content">
               <h3 class="timeline-title">Data Analyst</h3>
               <h4>Cutso Foods LLP</h4>
@@ -457,8 +447,8 @@
               </ul>
             </div>
           </div>
-          <div class="timeline-dot" data-aos="zoom-in"></div>
-          <div class="timeline-item right" data-aos="fade-left">
+          <div class="timeline-dot"></div>
+          <div class="timeline-item right">
             <div class="timeline-content">
               <h3 class="timeline-title">B.Tech in Computer Science</h3>
               <h4>VIT, India</h4>
@@ -471,8 +461,6 @@
       </div>
     </div>
   </section>
-
-
 
 
 
