--- a/index.html
+++ b/index.html
@@ -101,60 +101,44 @@
       <div class="skills-content">
         <div class="skills-category">
           <h3 class="category-title">Data Analysis</h3>
-          <div class="skills-list">
-            <div class="skill-item">
+          <div class="skills-list badge-layout">
+            <div class="skill-chip">
               <span class="skill-name">Statistical Analysis</span>
-              <div class="skill-bar">
-                <div class="skill-level" data-level="95"></div>
-              </div>
+              <span class="skill-tag">Expert</span>
             </div>
-            <div class="skill-item">
+            <div class="skill-chip">
               <span class="skill-name">Data Cleaning & Preprocessing</span>
-              <div class="skill-bar">
-                <div class="skill-level" data-level="90"></div>
-              </div>
+              <span class="skill-tag">Advanced</span>
             </div>
-            <div class="skill-item">
+            <div class="skill-chip">
               <span class="skill-name">Exploratory Data Analysis</span>
-              <div class="skill-bar">
-                <div class="skill-level" data-level="92"></div>
-              </div>
+              <span class="skill-tag">Expert</span>
             </div>
-            <div class="skill-item">
+            <div class="skill-chip">
               <span class="skill-name">A/B Testing</span>
-              <div class="skill-bar">
-                <div class="skill-level" data-level="85"></div>
-              </div>
+              <span class="skill-tag">Proficient</span>
             </div>
           </div>
         </div>
         
         <div class="skills-category">
           <h3 class="category-title">Machine Learning</h3>
-          <div class="skills-list">
-            <div class="skill-item">
+          <div class="skills-list badge-layout">
+            <div class="skill-chip">
               <span class="skill-name">Supervised Learning</span>
-              <div class="skill-bar">
-                <div class="skill-level" data-level="88"></div>
-              </div>
+              <span class="skill-tag">Expert</span>
             </div>
-            <div class="skill-item">
+            <div class="skill-chip">
               <span class="skill-name">Unsupervised Learning</span>
-              <div class="skill-bar">
-                <div class="skill-level" data-level="82"></div>
-              </div>
+              <span class="skill-tag">Expert</span>
             </div>
-            <div class="skill-item">
+            <div class="skill-chip">
               <span class="skill-name">Deep Learning</span>
-              <div class="skill-bar">
-                <div class="skill-level" data-level="75"></div>
-              </div>
+              <span class="skill-tag">Advanced</span>
             </div>
-            <div class="skill-item">
+            <div class="skill-chip">
               <span class="skill-name">Natural Language Processing</span>
-              <div class="skill-bar">
-                <div class="skill-level" data-level="80"></div>
-              </div>
+              <span class="skill-tag">Advanced</span>
             </div>
           </div>
         </div>
