--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
             </div>
             <div class="tech-item">
               <div class="tech-icon">
-                <i class="fas fa-chart-line"></i>
+                <i class="fa-solid fa-magnifying-glass-chart"></i>
               </div>
-              <span class="tech-name">Tableau</span>
+              <span class="tech-name">PowerBI</span>
             </div>
             <div class="tech-item">
               <div class="tech-icon">
@@ -178,15 +178,15 @@
             </div>
             <div class="tech-item">
               <div class="tech-icon">
-                <i class="fab fa-aws"></i>
+                <i class="fa-solid fa-cloud-arrow-up"></i>
               </div>
-              <span class="tech-name">AWS</span>
+              <span class="tech-name">Google Cloud</span>
             </div>
             <div class="tech-item">
               <div class="tech-icon">
-                <i class="fas fa-code-branch"></i>
+                <i class="fas fa-fan"></i>
               </div>
-              <span class="tech-name">Git</span>
+              <span class="tech-name">Airflow</span>
             </div>
             <div class="tech-item">
               <div class="tech-icon">
