--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
             <div class="tech-item">
               <div class="tech-icon">
-                <i class="fa-solid fa-chart-simple"></i>
+                <i class="fa-solid fa-magnifying-glass-chart"></i>
               </div>
               <span class="tech-name">PowerBI</span>
             </div>
