--- a/index.html
+++ b/index.html
@@ -102,44 +102,81 @@
         <div class="skills-category">
           <h3 class="category-title">Data Analysis</h3>
           <div class="skills-list badge-layout">
-            <div class="skill-chip">
+            <div class="skill-chip-ring">
               <span class="skill-name">Statistical Analysis</span>
-              <span class="skill-tag">Expert</span>
+              <svg class="ring" viewBox="0 0 36 36">
+                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <path class="progress" stroke-dasharray="95, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <text x="18" y="22" text-anchor="middle" class="ring-text">95%</text>
+              </svg>
             </div>
-            <div class="skill-chip">
-              <span class="skill-name">Data Cleaning & Preprocessing</span>
-              <span class="skill-tag">Advanced</span>
+
+            <div class="skill-chip-ring">
+              <span class="skill-name">Data Cleaning</span>
+              <svg class="ring" viewBox="0 0 36 36">
+                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <path class="progress" stroke-dasharray="90, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <text x="18" y="22" text-anchor="middle" class="ring-text">90%</text>
+              </svg>
             </div>
-            <div class="skill-chip">
-              <span class="skill-name">Exploratory Data Analysis</span>
-              <span class="skill-tag">Expert</span>
+
+            <div class="skill-chip-ring">
+              <span class="skill-name">EDA</span>
+              <svg class="ring" viewBox="0 0 36 36">
+                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <path class="progress" stroke-dasharray="92, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <text x="18" y="22" text-anchor="middle" class="ring-text">92%</text>
+              </svg>
             </div>
-            <div class="skill-chip">
+
+            <div class="skill-chip-ring">
               <span class="skill-name">A/B Testing</span>
-              <span class="skill-tag">Proficient</span>
+              <svg class="ring" viewBox="0 0 36 36">
+                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <path class="progress" stroke-dasharray="85, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <text x="18" y="22" text-anchor="middle" class="ring-text">85%</text>
+              </svg>
             </div>
           </div>
         </div>
         
         <div class="skills-category">
-          <h3 class="category-title">Machine Learning</h3>
-          <div class="skills-list badge-layout">
-            <div class="skill-chip">
-              <span class="skill-name">Supervised Learning</span>
-              <span class="skill-tag">Expert</span>
-            </div>
-            <div class="skill-chip">
-              <span class="skill-name">Unsupervised Learning</span>
-              <span class="skill-tag">Expert</span>
-            </div>
-            <div class="skill-chip">
-              <span class="skill-name">Deep Learning</span>
-              <span class="skill-tag">Advanced</span>
-            </div>
-            <div class="skill-chip">
-              <span class="skill-name">Natural Language Processing</span>
-              <span class="skill-tag">Advanced</span>
-            </div>
+        <h3 class="category-title">Machine Learning</h3>
+        <div class="skills-list badge-layout">
+          <div class="skill-chip-ring">
+            <span class="skill-name">Supervised Learning</span>
+            <svg class="ring" viewBox="0 0 36 36">
+              <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+              <path class="progress" stroke-dasharray="88, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+              <text x="18" y="22" text-anchor="middle" class="ring-text">88%</text>
+            </svg>
+          </div>
+
+          <div class="skill-chip-ring">
+            <span class="skill-name">Unsupervised Learning</span>
+            <svg class="ring" viewBox="0 0 36 36">
+              <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+              <path class="progress" stroke-dasharray="82, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+              <text x="18" y="22" text-anchor="middle" class="ring-text">82%</text>
+            </svg>
+          </div>
+
+          <div class="skill-chip-ring">
+            <span class="skill-name">Deep Learning</span>
+            <svg class="ring" viewBox="0 0 36 36">
+              <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+              <path class="progress" stroke-dasharray="75, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+              <text x="18" y="22" text-anchor="middle" class="ring-text">75%</text>
+            </svg>
+          </div>
+
+          <div class="skill-chip-ring">
+            <span class="skill-name">NLP</span>
+            <svg class="ring" viewBox="0 0 36 36">
+              <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+              <path class="progress" stroke-dasharray="80, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+              <text x="18" y="22" text-anchor="middle" class="ring-text">80%</text>
+            </svg>
           </div>
         </div>
         
