tech items modified

--- a/index.html
+++ b/index.html
@@ -184,43 +184,46 @@
   </section>
 
   <!-- Tools & Technologies Section -->
-  <div class="skills-category">
-    <h3 class="category-title">Tools & Technologies</h3>
-    <div class="skills-grid">
-      <div class="tech-item">
-        <div class="tech-icon"><i class="fab fa-python"></i></div>
-        <span class="tech-name">Python</span>
-      </div>
-      <div class="tech-item">
-        <div class="tech-icon"><i class="fas fa-database"></i></div>
-        <span class="tech-name">SQL</span>
-      </div>
-      <div class="tech-item">
-        <div class="tech-icon"><i class="fab fa-r-project"></i></div>
-        <span class="tech-name">R</span>
-      </div>
-      <div class="tech-item">
-        <div class="tech-icon"><i class="fa-solid fa-chart-bar"></i></div>
-        <span class="tech-name">Power BI</span>
-      </div>
-      <div class="tech-item">
-        <div class="tech-icon"><i class="fas fa-brain"></i></div>
-        <span class="tech-name">TensorFlow</span>
-      </div>
-      <div class="tech-item">
-        <div class="tech-icon"><i class="fa-solid fa-cloud-arrow-up"></i></div>
-        <span class="tech-name">Google Cloud</span>
-      </div>
-      <div class="tech-item">
-        <div class="tech-icon"><i class="fas fa-fan"></i></div>
-        <span class="tech-name">Airflow</span>
-      </div>
-      <div class="tech-item">
-        <div class="tech-icon"><i class="fas fa-server"></i></div>
-        <span class="tech-name">Spark</span>
+  <section id="tools-tech" class="skills section">
+  <div class="container">
+    <h2 class="section-title">Tools & Technologies</h2>
+      <div class="skills-grid four-cols">
+        <div class="tech-item">
+          <div class="tech-icon"><i class="fab fa-python"></i></div>
+          <span class="tech-name">Python</span>
+        </div>
+        <div class="tech-item">
+          <div class="tech-icon"><i class="fas fa-database"></i></div>
+          <span class="tech-name">SQL</span>
+        </div>
+        <div class="tech-item">
+          <div class="tech-icon"><i class="fab fa-r-project"></i></div>
+          <span class="tech-name">R</span>
+        </div>
+        <div class="tech-item">
+          <div class="tech-icon"><i class="fa-solid fa-chart-bar"></i></div>
+          <span class="tech-name">Power BI</span>
+        </div>
+        <div class="tech-item">
+          <div class="tech-icon"><i class="fas fa-brain"></i></div>
+          <span class="tech-name">TensorFlow</span>
+        </div>
+        <div class="tech-item">
+          <div class="tech-icon"><i class="fa-solid fa-cloud-arrow-up"></i></div>
+          <span class="tech-name">Google Cloud</span>
+        </div>
+        <div class="tech-item">
+          <div class="tech-icon"><i class="fas fa-fan"></i></div>
+          <span class="tech-name">Airflow</span>
+        </div>
+        <div class="tech-item">
+          <div class="tech-icon"><i class="fas fa-server"></i></div>
+          <span class="tech-name">Spark</span>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+
 
 
   <!-- Projects Section -->
