--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
   <section id="skills" class="skills section">
     <div class="container">
       <h2 class="section-title">Skills & Expertise</h2>
+
       <div class="skills-content">
+        <!-- Data Analysis -->
         <div class="skills-category">
           <h3 class="category-title">Data Analysis</h3>
-          <div class="skills-list badge-layout">
+          <div class="skills-list">
             <div class="skill-chip-ring">
               <span class="skill-name">Statistical Analysis</span>
               <svg class="ring" viewBox="0 0 36 36">
@@ -139,49 +141,52 @@
             </div>
           </div>
         </div>
-        
+
+        <!-- Machine Learning -->
         <div class="skills-category">
-        <h3 class="category-title">Machine Learning</h3>
-        <div class="skills-list badge-layout">
-          <div class="skill-chip-ring">
-            <span class="skill-name">Supervised Learning</span>
-            <svg class="ring" viewBox="0 0 36 36">
-              <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-              <path class="progress" stroke-dasharray="88, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-              <text x="18" y="22" text-anchor="middle" class="ring-text">98%</text>
-            </svg>
-          </div>
+          <h3 class="category-title">Machine Learning</h3>
+          <div class="skills-list">
+            <div class="skill-chip-ring">
+              <span class="skill-name">Supervised Learning</span>
+              <svg class="ring" viewBox="0 0 36 36">
+                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <path class="progress" stroke-dasharray="88, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <text x="18" y="22" text-anchor="middle" class="ring-text">98%</text>
+              </svg>
+            </div>
 
-          <div class="skill-chip-ring">
-            <span class="skill-name">Unsupervised Learning</span>
-            <svg class="ring" viewBox="0 0 36 36">
-              <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-              <path class="progress" stroke-dasharray="82, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-              <text x="18" y="22" text-anchor="middle" class="ring-text">96%</text>
-            </svg>
-          </div>
+            <div class="skill-chip-ring">
+              <span class="skill-name">Unsupervised Learning</span>
+              <svg class="ring" viewBox="0 0 36 36">
+                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <path class="progress" stroke-dasharray="82, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <text x="18" y="22" text-anchor="middle" class="ring-text">96%</text>
+              </svg>
+            </div>
 
-          <div class="skill-chip-ring">
-            <span class="skill-name">Deep Learning</span>
-            <svg class="ring" viewBox="0 0 36 36">
-              <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-              <path class="progress" stroke-dasharray="75, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-              <text x="18" y="22" text-anchor="middle" class="ring-text">95%</text>
-            </svg>
-          </div>
+            <div class="skill-chip-ring">
+              <span class="skill-name">Deep Learning</span>
+              <svg class="ring" viewBox="0 0 36 36">
+                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <path class="progress" stroke-dasharray="75, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <text x="18" y="22" text-anchor="middle" class="ring-text">95%</text>
+              </svg>
+            </div>
 
-          <div class="skill-chip-ring">
-            <span class="skill-name">NLP</span>
-            <svg class="ring" viewBox="0 0 36 36">
-              <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-              <path class="progress" stroke-dasharray="80, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-              <text x="18" y="22" text-anchor="middle" class="ring-text">90%</text>
-            </svg>
+            <div class="skill-chip-ring">
+              <span class="skill-name">NLP</span>
+              <svg class="ring" viewBox="0 0 36 36">
+                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <path class="progress" stroke-dasharray="80, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
+                <text x="18" y="22" text-anchor="middle" class="ring-text">90%</text>
+              </svg>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
 
   <!-- Tools & Technologies Section -->
   <section id="tools-tech" class="skills section">
