--- a/index.html
+++ b/index.html
@@ -96,96 +96,38 @@
 
   <!-- Skills Section -->
   <section id="skills" class="skills section">
-    <div class="container">
-      <h2 class="section-title">Skills & Expertise</h2>
+  <div class="container">
+    <h2 class="section-title">Skills & Expertise</h2>
 
-      <div class="skills-content">
-        <!-- Data Analysis -->
-        <div class="skills-category">
-          <h3 class="category-title">Data Analysis</h3>
-          <div class="skills-list">
-            <div class="skill-chip-ring">
-              <span class="skill-name">Statistical Analysis</span>
-              <svg class="ring" viewBox="0 0 36 36">
-                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <path class="progress" stroke-dasharray="95, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <text x="18" y="22" text-anchor="middle" class="ring-text">98%</text>
-              </svg>
-            </div>
-
-            <div class="skill-chip-ring">
-              <span class="skill-name">Data Cleaning</span>
-              <svg class="ring" viewBox="0 0 36 36">
-                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <path class="progress" stroke-dasharray="90, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <text x="18" y="22" text-anchor="middle" class="ring-text">95%</text>
-              </svg>
-            </div>
-
-            <div class="skill-chip-ring">
-              <span class="skill-name">EDA</span>
-              <svg class="ring" viewBox="0 0 36 36">
-                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <path class="progress" stroke-dasharray="92, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <text x="18" y="22" text-anchor="middle" class="ring-text">95%</text>
-              </svg>
-            </div>
-
-            <div class="skill-chip-ring">
-              <span class="skill-name">A/B Testing</span>
-              <svg class="ring" viewBox="0 0 36 36">
-                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <path class="progress" stroke-dasharray="85, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <text x="18" y="22" text-anchor="middle" class="ring-text">90%</text>
-              </svg>
-            </div>
-          </div>
+    <div class="accordion">
+      <!-- Accordion Item 1 -->
+      <div class="accordion-item">
+        <button class="accordion-header">Data Analysis</button>
+        <div class="accordion-content">
+          <ul>
+            <li><span class="skill-name">Statistical Analysis</span> <span class="tag expert">Expert</span></li>
+            <li><span class="skill-name">Data Cleaning & Preprocessing</span> <span class="tag advanced">Advanced</span></li>
+            <li><span class="skill-name">Exploratory Data Analysis</span> <span class="tag expert">Expert</span></li>
+            <li><span class="skill-name">A/B Testing</span> <span class="tag proficient">Proficient</span></li>
+          </ul>
         </div>
+      </div>
 
-        <!-- Machine Learning -->
-        <div class="skills-category">
-          <h3 class="category-title">Machine Learning</h3>
-          <div class="skills-list">
-            <div class="skill-chip-ring">
-              <span class="skill-name">Supervised Learning</span>
-              <svg class="ring" viewBox="0 0 36 36">
-                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <path class="progress" stroke-dasharray="88, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <text x="18" y="22" text-anchor="middle" class="ring-text">98%</text>
-              </svg>
-            </div>
-
-            <div class="skill-chip-ring">
-              <span class="skill-name">Unsupervised Learning</span>
-              <svg class="ring" viewBox="0 0 36 36">
-                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <path class="progress" stroke-dasharray="82, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <text x="18" y="22" text-anchor="middle" class="ring-text">96%</text>
-              </svg>
-            </div>
-
-            <div class="skill-chip-ring">
-              <span class="skill-name">Deep Learning</span>
-              <svg class="ring" viewBox="0 0 36 36">
-                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <path class="progress" stroke-dasharray="75, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <text x="18" y="22" text-anchor="middle" class="ring-text">95%</text>
-              </svg>
-            </div>
-
-            <div class="skill-chip-ring">
-              <span class="skill-name">NLP</span>
-              <svg class="ring" viewBox="0 0 36 36">
-                <path class="bg" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <path class="progress" stroke-dasharray="80, 100" d="M18 2a16 16 0 1 1 0 32a16 16 0 1 1 0-32" />
-                <text x="18" y="22" text-anchor="middle" class="ring-text">90%</text>
-              </svg>
-            </div>
-          </div>
+      <!-- Accordion Item 2 -->
+      <div class="accordion-item">
+        <button class="accordion-header">Machine Learning</button>
+        <div class="accordion-content">
+          <ul>
+            <li><span class="skill-name">Supervised Learning</span> <span class="tag expert">Expert</span></li>
+            <li><span class="skill-name">Unsupervised Learning</span> <span class="tag expert">Expert</span></li>
+            <li><span class="skill-name">Deep Learning</span> <span class="tag advanced">Advanced</span></li>
+            <li><span class="skill-name">Natural Language Processing</span> <span class="tag advanced">Advanced</span></li>
+          </ul>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
 
   <!-- Tools & Technologies Section -->
@@ -625,5 +567,14 @@
   </footer>
 
   <script src="js/main.js"></script>
+  <script>
+    document.querySelectorAll('.accordion-header').forEach(button => {
+      button.addEventListener('click', () => {
+        const content = button.nextElementSibling;
+        button.classList.toggle('active');
+        content.style.maxHeight = content.style.maxHeight ? null : content.scrollHeight + 'px';
+      });
+    });
+  </script>
 </body>
 </html>
